svn path=/branches/v0.05.00-ZEPostProcessor/; revision=79

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -11,8 +11,11 @@ PhysicsModule = Ageia
 GameModule = TestGame
 
 [Graphics]
+ScreenWidth = 800
 ScreenWidth = 1024
+ScreenHeight = 600
 ScreenHeight = 768
+Fullscreen = false
 Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
