svn path=/branches/v0.04.05-PhysicsAndModel/; revision=81

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -11,9 +11,9 @@ PhysicsModule = Ageia
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1680
-ScreenHeight = 1050
-Fullscreen = true
+ScreenWidth = 1280
+ScreenHeight = 1024
+Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
