--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -423,6 +423,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\ZEDS\Definitions.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\ZEDS\Definitions.h"
 				>
 			</File>
@@ -448,10 +452,6 @@
 			</File>
 			<File
 				RelativePath="..\Source\ZEDS\Variant.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEDS\ZEDS.cpp"
 				>
 			</File>
 		</Filter>
@@ -572,10 +572,6 @@
 			</File>
 			<File
 				RelativePath="..\Source\ZEMath\Vector.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\ZEMath_.h"
 				>
 			</File>
 		</Filter>
@@ -719,11 +715,27 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Graphics\DirectionalLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\DirectionalLight.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Graphics\FixedMaterial.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\Source\Graphics\FixedMaterial.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\FrameBufferRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\FrameBufferRenderer.h"
 				>
 			</File>
 			<File
@@ -771,11 +783,27 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\PostEffect.h"
+				RelativePath="..\Source\Graphics\OmniProjectiveLight.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\PostProcessor.h"
+				RelativePath="..\Source\Graphics\OmniProjectiveLight.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\PointLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\PointLight.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\ProjectiveLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\ProjectiveLight.h"
 				>
 			</File>
 			<File
@@ -783,11 +811,23 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\Renderer.h"
+				RelativePath="..\Source\Graphics\PostEffect.h"
 				>
 			</File>
 			<File
 				RelativePath="..\Source\Graphics\RenderOrder.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\RenderOrder.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\ShadowRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\ShadowRenderer.h"
 				>
 			</File>
 			<File
@@ -803,6 +843,62 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Source\Graphics\Texture2D.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture2D.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture2DResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture2DResource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture3D.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture3D.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture3DResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\Texture3DResource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\TextureCube.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\TextureCube.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\TextureCubeResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\TextureCubeResource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\TextureRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Graphics\TextureRenderer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Source\Graphics\TextureResource.cpp"
 				>
 			</File>
@@ -815,7 +911,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\Graphics\VertexBuffer.h"
+				RelativePath="..\Source\Graphics\VertexDeclaration.h"
 				>
 			</File>
 			<File
@@ -878,27 +974,43 @@
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9PostProcessor.cpp"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9FixedMaterialShader.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9PostProcessor.h"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9FixedMaterialShader.h"
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9Renderer.cpp"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9FrameBufferRenderer.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9Renderer.h"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9FrameBufferRenderer.h"
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9Shader.cpp"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9Module.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9Shader.h"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9Module.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9ModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9ModuleDescription.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9RendererBase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9RendererBase.h"
 					>
 				</File>
 				<File
@@ -906,11 +1018,43 @@
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture.cpp"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9ShadowRenderer.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture.h"
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9ShadowRenderer.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture2D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture2D.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture3D.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9TextureCube.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9TextureCube.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9TextureRenderer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\Direct3D9\D3D9TextureRenderer.h"
 					>
 				</File>
 				<File
@@ -927,22 +1071,6 @@
 				</File>
 				<File
 					RelativePath="..\Source\Graphics\Direct3D9\D3D9VertexDeclaration.h"
-					>
-				</File>
-				<File
-					RelativePath="..\Source\Graphics\Direct3D9\Direct3D9Module.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\Source\Graphics\Direct3D9\Direct3D9Module.h"
-					>
-				</File>
-				<File
-					RelativePath="..\Source\Graphics\Direct3D9\Direct3D9ModuleDescription.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\Source\Graphics\Direct3D9\Direct3D9ModuleDescription.h"
 					>
 				</File>
 				<Filter
@@ -1009,6 +1137,126 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="PostProcessor"
+					>
+					<File
+						RelativePath="..\Source\Graphics\Direct3D9\PostProcessor\D3D9PostProcessor.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\Source\Graphics\Direct3D9\PostProcessor\D3D9PostProcessor.h"
+						>
+					</File>
+					<File
+						RelativePath="..\Source\Graphics\Direct3D9\PostProcessor\D3D9PPBlurNode.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\Source\Graphics\Direct3D9\PostProcessor\D3D9PPBlurNode.h"
+						>
+					</File>
+					<File
+						RelativePath="..\Source\Graphics\Direct3D9\PostProcessor\D3D9PPScreenOutputNode.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\Source\Graphics\Direct3D9\PostProcessor\D3D9PPScreenOutputNode.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
+			<Filter
+				Name="PostProcessor"
+				>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PostProcessor.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PostProcessor.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PostProcessorNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PostProcessorNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPBlurNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPBlurNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPColorInputNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPColorInputNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPDepthInputNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPDepthInputNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPFilter1DNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPFilter1DNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPFilter2DNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPFilter2DNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPScreenOutputNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPScreenOutputNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPTextureInputNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPTextureInputNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPTextureOutputNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPTextureOutputNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPVelocityInputNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\Graphics\PostProcessor\PPVelocityInputNode.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
