ADD: ZEUIControl added. ADD: ZEUIRenderer added. BUG: DirectInput InputMap->InputActionCount crash bug fixed. ADD: ZEFontResource added. ADD: AddReferance has been added to ZEResource. It will be used on many Setter and Getters and will track shared and non shared resources. CHG: Now unshared resources have referance count. CHG: Resource release mechanism changed. Referance count added for non shared resources.
svn path=/trunk/; revision=95

--- a/Zinek Engine Test.vcproj
+++ b/Zinek Engine Test.vcproj
@@ -118,9 +118,9 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="$(ProjectDir)Include"
+				AdditionalIncludeDirectories="$(ProjectDir)Include;$(ProjectDir)Test;$(ProjectDir)Source"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
