--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -44,7 +44,7 @@
 				AdditionalOptions="/MP8"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\source&quot;;&quot;$(ProjectDir)\include&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_BREAKONERROR;ZEDEBUG_PERFHUD;ZEDEBUG_CHECKMEMORY"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_BREAKONERROR;ZEDEBUG_PERFHUD"
 				GeneratePreprocessedFile="0"
 				MinimalRebuild="true"
 				ExceptionHandling="1"
@@ -69,7 +69,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib unittest.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
 				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib\Multi-threaded\x86\Debug&quot;"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
@@ -127,13 +127,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/I ."
-				Optimization="2"
+				Optimization="3"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\source&quot;;&quot;$(ProjectDir)\include&quot;;&quot;$(ProjectDir)\include\directx&quot;;&quot;$(ProjectDir)\include\aegia\Foundation\include&quot;;&quot;$(ProjectDir)\include\aegia\Physics\include&quot;;&quot;$(ProjectDir)\include\aegia\PhysXLoader\include&quot;;&quot;$(ProjectDir)\include\aegia\Cooking\Include&quot;;&quot;$(ProjectDir)\include\aegia\NxExtensions\include&quot;;&quot;$(ProjectDir)\include\aegia\NxCharacter\include&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;FREEIMAGE_LIB;ZEDEBUG_PERFHUD"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;FREEIMAGE_LIB"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -159,7 +159,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/fixed:no"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib unittest.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib\Multi-threaded\x86\Release&quot;"
 				IgnoreDefaultLibraryNames=""
@@ -1262,8 +1262,64 @@
 			>
 		</Filter>
 		<Filter
-			Name="GUI"
+			Name="UI"
 			>
+			<File
+				RelativePath=".\Source\UI\FontFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\FontFile.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\FontResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\FontResource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIControl.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIEvents.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIEvents.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIRectangle.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIRectangle.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UIRenderer.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UITextControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\UI\UITextControl.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="ZEDS"
@@ -1481,6 +1537,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\Changelog.txt"
+			>
+		</File>
 		<File
 			RelativePath=".\Source\CompileOptions.h"
 			>
