--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -69,8 +69,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib\Multi-threaded\x86\Debug&quot;"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib libmpg123.lib"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib&quot;;&quot;$(ProjectDir)\lib\Multi-threaded\x86\Debug&quot;"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -159,9 +159,9 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/fixed:no"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib libmpg123.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib\Multi-threaded\x86\Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib&quot;;&quot;$(ProjectDir)\lib\Multi-threaded\x86\Release&quot;"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -1206,12 +1206,45 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Sound\SoundResourceMP3.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Sound\SoundResourceMP3.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Sound\SoundResourceOGG.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Sound\SoundResourceOGG.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Sound\SoundResourceWAV.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Sound\SoundResourceWAV.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Sound\SoundSource.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\Source\Sound\SoundSource.h"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+						Outputs="$(InputPath).zpp"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\Source\Sound\SoundSource3D.cpp"
@@ -1225,11 +1258,51 @@
 				Name="DirectSound"
 				>
 				<File
-					RelativePath=".\Source\Sound\DirectSoundModule.cpp"
+					RelativePath=".\Source\Sound\DirectSound\DSComponentBase.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Sound\DirectSoundModule.h"
+					RelativePath=".\Source\Sound\DirectSound\DSComponentBase.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSListener.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSListener.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSModule.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSModule.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSModuleDescription.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSSoundSource.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSSoundSource.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSSoundSource3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Sound\DirectSound\DSSoundSource3D.h"
 					>
 				</File>
 			</Filter>
@@ -1277,7 +1350,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 						AdditionalDependencies=""
 						Outputs="$(InputPath).zpp"
 					/>
